--- a/hello.html
+++ b/hello.html
@@ -4,5 +4,16 @@
   <title>My webpage</title>
   </head>
   <body>Hello World, Hello Again hello hello hello!
+    <a href="div_span">
+    <a href="font">
+    <a href="headings">
+    <a href="image">
+    <a href="lists">
+    <a href="size">
+    <a href="style0">
+    <a href="style2">
+    <a href="stylingtable">
+    <a href="table">
+    <a href="test">
   </body>
   </html>
