--- a/hello.html
+++ b/hello.html
@@ -6,18 +6,18 @@
   <body>Hello World, Hello Again hello hello hello!
 <div>
   <h1>
-    <p><a href="div_span">div_span</a>
-    <p><a href="font">font</a>
-    <p><a href="headings">headings</a>
-    <p><a href="image">image</a>
-    <p><a href="lists">lists</a>
-    <p><a href="size">size</a>
-    <p><a href="style0">style0</a>
-    <p><a href="style2">style2</a>
-    <p><a href="stylingtable">stylingtable</a>
-    <p><a href="table">table</a>
-    <p><a href="test">test</a>
-  
+    <p><a href="div_span.html">div_span</a>
+    <p><a href="font.html">font</a>
+    <p><a href="headings.html">headings</a>
+    <p><a href="image.html">image</a>
+    <p><a href="lists.html">lists</a>
+    <p><a href="size.html">size</a>
+    <p><a href="style0.html">style0</a>
+    <p><a href="style2.html">style2</a>
+    <p><a href="stylingtable.html">stylingtable</a>
+    <p><a href="table.html">table</a>
+    <p><a href="test.html">test</a>
+
   </h1>
     </div>
   </body>
