New files for hello.html

--- a/font.html
+++ b/font.html
@@ -3,10 +3,9 @@
   <title>My webpage</title>
 <style>
 div {
-  border: 3px dotted red
-}
-h1 {
-  border: 2px color: blue;
+  font-family: Arial, sans-serif;
+  font-size: 28px;
+  font-weight: bold;
 }
 </style>
   </head>
@@ -14,6 +13,5 @@ h1 {
   <div>
     Hello, World!
   </div>
-  <h1>Second Example</h1>
   </body>
   </html>
