--- a/size.html
+++ b/size.html
@@ -3,10 +3,11 @@
   <title>My webpage</title>
 <style>
 div {
-  border: 3px dotted red
-}
-h1 {
-  border: 2px color: blue;
+  background-color: teal;
+  width: 500px;
+  height: 400px;
+  margin: 30px;
+  padding: 20px;
 }
 </style>
   </head>
@@ -14,6 +15,5 @@ h1 {
   <div>
     Hello, World!
   </div>
-  <h1>Second Example</h1>
   </body>
   </html>
