Updated Video version

--- a/hello.html
+++ b/hello.html
@@ -6,6 +6,7 @@
   <body>Hello World, Hello Again hello hello hello!
 <div>
   <h1>
+    <p><a href="video.html">Video</a>
     <p><a href="div_span.html">div_span</a>
     <p><a href="font.html">font</a>
     <p><a href="headings.html">headings</a>
